--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 .idea
+whole.json
 __pycache__/
 *.py[cod]
 *$py.class
@@ -128,3 +129,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+/store/templates/example.html
